# G4FAgent

./: MANIFEST.in  README.md  config.json  config.py  constants.py  main.py  pyproject.toml  run_tests.bat  run_tests.sh  utils.py
.g4fagent_db/: scan_models.json
agents/: PlanningAgent.json
docs/: API.md  OpenAPI.md
g4fagent/: README.md  __init__.py  api_server.py  config.py  constants.py  core.py  database.py  utils.py
g4fagent/assets/: config.json
g4fagent/assets/agents/: DebugAgent.json  PlanningAgent.json  WritingAgent.json
g4fagent/tools/: __init__.py  registry.py
tests/: __init__.py  helpers.py  test_offline_api_server.py  test_offline_config_utils.py  test_offline_core.py  test_offline_database.py  test_offline_main_quality.py  test_offline_main_scan_command.py  test_offline_mcp_tools.py  test_offline_tools.py  test_online_g4f.py  test_online_mcp_tools.py
tests/fixtures/mcp_tools/: __init__.py  mcp_tools.py
tools/: Files.py  __init__.py  registry.py
